Upgraded JavaFX from 21 to 25 and added version implications to remove warnings